<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateRoutinesActivity">

    <EditText
            android:id="@+id/et_title"
            android:hint="@string/eat_an_apple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/et_desc"
            android:inputType="textMultiLine"
            android:lines="2"
            android:hint="@string/apple_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_choose_image"
            android:text="@string/choose_routine_image"
            android:layout_width="match_parent"
            android:onClick="chooseImage"
            android:layout_height="wrap_content"/>

    <ImageView
            android:id="@+id/iv_image"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/selected_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

    <Button
            android:id="@+id/btn_save"
            android:padding="8dp"
            android:text="@string/save"
            android:onClick="storeRoutine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_error"
            android:visibility="invisible"
            android:textColor="#e53935"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>